<resources>
    <string name="app_name">Recipe Book</string>

    <!-- Strings for Main Activity -->
    <string name="search_button">Search</string>
    <string name="add_recipe_button">Add Recipe</string>

    <!-- Strings for Search Activity -->
    <string name="search_label">Search By:</string>

    <string name="name_option">Name</string>
    <string name="type_option">Type</string>
    <string name="ingredient_option">Ingredients</string>
    <string name="tag_option">Tags</string>
    <string name="all_option">View All</string>

    <string name="name_search_hint">Enter recipe name&#8230;</string>
    <string name="title_activity_display_recipe">DisplayRecipeActivity</string>

    <!-- Strings for Add Recipe Activity -->
    <!-- TODO: Add string resources for AddRecipeActivity layout's hints -->
    <string name="recipe_name">Name:</string>
    <string name="recipe_type">Type:</string>
    <string name="recipe_ingredient">Ingredients:</string>
    <string name="recipe_instruction">Instructions:</string>
    <string name="recipe_prep_time">Prep Time:</string>
    <string name="recipe_cook_time">Cook Time:</string>
    <string name="recipe_tag">Tags:</string>
    <string name="recipe_serving">Servings:</string>
    <string name="recipe_add_ingredient">Add Ingredient</string>
    <string name="recipe_add_instruction">Add Instruction</string>
    <string name="recipe_add_new">Add Recipe</string>

    <!-- Strings for Display Recipe Activity -->
    <string name="add_note">Add Note</string>

    <!-- Strings for Recipe Confirmation Activity -->
    <string name="cancel_button">Cancel</string>

    <!-- Strings for searches -->
    <string name="type_search">Type:</string>
    <string name="find_button">Find</string>

    <!-- Strings for Add Note Activity -->
    <string name="note_label">Note:</string>
    <string name="note_prep_time">Prep Time:</string>
    <string name="note_cook_time">Cook Time:</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="add_note_button">Add Note</string>

    <!-- Fragments -->
    <string name="modify_button">Modify</string>

    <!-- Photo Activity -->
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_photo_confirmation">PhotoConfirmationActivity</string>

    <!-- Placeholders for UI design -->
    <string name="placeholder">Placeholder</string>

</resources>
