<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: Several strings are hardcoded.  Replace these with strings from resource file -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/recipe_name" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/nameTextView"
                android:layout_weight="0.07"
                android:ems="10"
                android:hint="Name"
                android:inputType="text" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/recipe_type" />

            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@+id/typeTextView"
                android:layout_toRightOf="@+id/typeTextView" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/prepTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/recipe_prep_time" />

            <EditText
                android:id="@+id/prepTimeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/prepTimeTextView"
                android:layout_toRightOf="@+id/prepTimeTextView"
                android:ems="10"
                android:hint="Minutes"
                android:inputType="time" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cookTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/recipe_cook_time" />

            <EditText
                android:id="@+id/cookTimeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/cookTimeTextView"
                android:ems="10"
                android:hint="Minutes"
                android:inputType="time" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ingredientLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ingredientFragmentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/ingredientTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_ingredient" />

            <EditText
                android:id="@+id/ingredientEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Ingredient"
                android:inputType="text" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Chopped, sliced, etc..."
                android:inputType="text" />

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Amount"
                android:inputType="text" />

            <Button
                android:id="@+id/addIngredientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_add_ingredient" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/instructionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/instructionFragmentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/instructionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_instruction" />

            <EditText
                android:id="@+id/instructionEditText"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:ems="10"
                android:gravity="top|left"
                android:hint="Instruction"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/addInstructionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_add_instruction" />

        </LinearLayout>

        <Button
            android:id="@+id/addRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:text="@string/recipe_add_new" />

    </LinearLayout>
</ScrollView>
